salesforce/force-app/main/default/objects/Purchase__c/Purchase__c.object-meta.xml
<CustomObject>
    <description>One online order. Named Purchase__c, NOT Order__c, to avoid collision with the standard Order object.</description>
    <label>Purchase</label>
    <nameField>
        <displayFormat>PUR-{0000}</displayFormat>
        <label>Purchase Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>