salesforce/force-app/main/default/objects/Purchase__c/fields/External_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Id__c</fullName>
    <description>The vendor's own order number, exactly as it appears in the source message. Never invented.</description>
    <label>External Order Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>