salesforce/force-app/main/default/objects/Purchase__c/fields/Last_Event_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_At__c</fullName>
    <description>When the most recent tracking event happened. Drives stall detection.</description>
    <label>Last Event At</label>
    <type>DateTime</type>
</CustomField>