salesforce/force-app/main/default/objects/Purchase__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <description>Something could not be matched or applied confidently. Surfaces in Today &gt; Review.</description>
    <label>Needs Review</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>