salesforce/force-app/main/default/objects/Purchase__c/fields/Return_Window_Ends__c.field-meta.xml
<CustomField>
    <fullName>Return_Window_Ends__c</fullName>
    <description>Delivered date + the vendor's Return_Window_Days__c. Null when the vendor window is unknown.</description>
    <label>Return Window Ends</label>
    <type>Date</type>
</CustomField>