salesforce/force-app/main/default/objects/Purchase__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Set by DakiyaStateMachine only. 'Delivered (Unconfirmed)' means the courier says delivered but Gitanjali has not confirmed it.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Placed</fullName>
                    <default>true</default>
                    <label>Placed</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Partially Shipped</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered (Unconfirmed)</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Return in Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>