salesforce/force-app/main/default/objects/Purchase__c/fields/Status_Rank__c.field-meta.xml
<CustomField>
    <fullName>Status_Rank__c</fullName>
    <description>Numeric rank of Status__c. The state machine only moves a purchase forward unless the event is an explicit exception. See BUILD_SPEC section 6.</description>
    <label>Status Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>