salesforce/force-app/main/default/objects/Purchase__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short human label, e.g. 'Serum + lipstick'. What shows in the Orders list.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>