salesforce/force-app/main/default/objects/Purchase__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Who this was bought from.</description>
    <label>Vendor</label>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>