salesforce/force-app/main/default/objects/Purchase__c/fields/Vendor_Order_Key__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Order_Key__c</fullName>
    <description>Idempotency key: lower(vendorId + ':' + orderId). Manual orders get a UUID. Prevents duplicate purchases when the same email arrives twice.</description>
    <label>Vendor Order Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>